[package]
name = "extrasafe"
version = "0.1.3"
edition = "2021"
authors = ["Harry Stern <harry@harrystern.net>",]
description = "Make your code extrasafe by preventing it from calling unneeded syscalls."
repository = "https://github.com/boustrophedon/extrasafe"
license = "MIT"
keywords = ["security", "seccomp", "syscall"]
categories = ["os::linux-apis"]

[features]
default = ["reqwest/native-tls"]

# request and rusqlite are only used when building examples.
# libseccomp-rs/bundled downloads and statically links libseccomp.
bundled = ["libseccomp-rs/bundled", "reqwest/rustls-tls", "rusqlite/bundled"]

[dependencies]
libseccomp = "^0.2"
libc = "^0.2"
thiserror = "^1"
syscalls = "^0.5"

[dev-dependencies]
bytes = "^1"
crossbeam = "^0.8"
crossbeam-queue = "^0.3"
crossbeam-channel = "^0.5"
tempfile = "^3"
tokio = "^1.15"
hyper = { version = "^0.14", features = ["http1", "server", "runtime", "tcp"] }
warp = "^0.3"
reqwest = { version = "^0.11", default-features = false }
rusqlite = { version = "^0.26" }
